@@ -35,6 +35,11 @@ lastfm_session_new                      (const char *username,
                                          LastfmErr  *err);
 
 LastfmPls *
+lastfm_request_playlist                 (LastfmSession *s,
+                                         gboolean       discovery,
+                                         const char    *pls_title);
+
+LastfmPls *
 lastfm_parse_playlist                   (xmlDoc        *doc,
                                          const char    *default_pls_title);
 
@@ -44,5 +49,10 @@ lastfm_request_custom_playlist          (LastfmSession *s,
 
 void
 lastfm_session_destroy                  (LastfmSession *session);
+
+gboolean
+lastfm_set_radio                        (LastfmSession  *s,
+                                         const char     *radio_url,
+                                         char          **pls_title);
 
 #endif
